Changes for Venice, 0.746 beta ??/??/????
=========================================
* Change table state save/restore to avoid saving the entire table contents 

Changes for Venice, 0.745 beta ??/??/????

* Intraday charts
% Preload data for most used symbols on cache refresh.

Changes for Venice, 0.74 beta 16/01/2012
=========================================
* Added first class functions, includes, comments and alerts to the Gondola language
* Added ability for Gondola rules to reference symbols explicitly
* Graph settings now persist when editing settings instead of always showing
  defaults.  
* Always use database when database settings are changed
* Add option to enter database password instead of storing on disk.
* Mask database password when it is stored on disk
* Added accelerator key for help
* Fixed bug #(3437002) Gondola evaluation of boolean expressions.
 



Changes for Venice, 0.731 beta 16/10/2011
=========================================
* Fixed bug "Find highlights wrong region in help text" - (Bug #3302556)
* Fixed bug in Saving and restoring windows (Bug #3315179)
* Added missing library for alerts and fixed bug.
* Fixed bug "Add Macro overwrites previous one" (Bug #1328208) 

Changes for Venice, 0.73 beta 10/05/2011
=========================================
* Changed symbol column from CHAR to VARCHAR (Patch #3228829)
* Added expiry and flush functionality for Quote Cache. (Makes imported data visible without restarting Venice), 
* Fixed Alert bugs and German translations.
* Updated table checks to be case insensitive (Patch #3226995)
* Bug fix for Bug #3191299 


Changes for Venice, 0.723 beta 22/02/2011
=========================================

* Fixed bug #3137455 February 31st is accepted as a date
* Added alert functionality
* Added cursor tracking
* Keyboard shortcut to close windows.
* Improved internationalisation for console (Christian Brom) 

Changes for Venice, 0.722 beta 01/11/2010
-----------------------------------------
