@@ -923,7 +923,15 @@ variable.</para>
 
 <section name="Gondola User Defined Functions">
 <para>In addition to tbe built in functions listed below, the Gondola langauage supports functions written by the user. Defining a function is similar to defining a variable - the return type and the type of any parameters must be specified. Additionally, the keyword "function" is appended after the type definition.</para>
-<para>For Example: <code>int function factorialFunction(int n) </code> defines a function returning an integer value, and takes one integer parameter "n". The body of the function has the same properties as a for or while loop in that it is the last line in the expression which is the return value. Note that the type of the return value must match the function definition.
+<para>For Example: </para>
+<para><code>int function factorialFunction(int n) </code> </para>
+<para>defines a function returning an integer value, and takes one integer parameter "n". The body of the function has the same properties as a for or while loop in that it is the last line in the expression which is the return value. Note that the type of the return value must match the function definition. A warning on returning from functions: Gondola does not have a line separator (e.g. ";") and you may have unexpected results when you try to write a function like this: <para>
+<code>int function returnSomeInteger() { <linebreak/>
+ float tmpFloat = returnSomeFloat()  <linebreak/>
+ -returnSomeInt2() <linebreak/>
+} 
+</code></para>
+<para> This will return a type mismatch because the last line actually is: <code> float tmpFloat = returnSomeFloat() - returnSomeInt2() </code>. </para>
 </para>
 <para>Variables can be defined inside functions. However, their scope will persist when the function call ends, because Gondola is not stack based at this time. Similarly, declared parameters remain in scope as well. However, variables which are declared in an included rule will not be in scope. See the following section "Including External Rules" for more details.</para>
 </section>
@@ -985,6 +993,12 @@ trading date, -1 means the previous trading date, etc.</para>
 similarly for <code>open</code>, <code>high</code> and <code>low</code>.</para>
 <para>The expression <code>bol_upper(close, 26, 0)</code> is the same as <code>bol_upper(close, 26)</code>
 similarly for <code>open</code>, <code>high</code> and <code>low</code>.</para>
+</section>
+
+<section name="ceil">
+  <para>The ceil function takes a floating point number and returns an integer that is not less than the given argument.</para>
+  <para>Example:</para>
+  <para><code>ceil(-3.14159)</code> returns -4.</para>
 </section>
 
 <section name="Correlation">
@@ -1071,6 +1085,12 @@ similarly for <code>open</code>, <code>high</code> and <code>low</code>.</para>
 similarly for <code>open</code>, <code>high</code> and <code>low</code>.</para>
 <para>The expression <code>ema(close, 26, -1, 0.1)</code> is the same as <code>ema(close, 26, -1)</code>
 similarly for <code>open</code>, <code>high</code> and <code>low</code>.</para>
+</section>
+
+<section name="Floor">
+  <para>The floor function takes a floating point number and returns an integer that is not greater than the given argument.</para>
+  <para>Example:</para>
+  <para><code>floor(-3.14159)</code> returns -3.</para>
 </section>
 
 <section name="For">
@@ -1682,7 +1702,7 @@ in the preferences. If the ANN has not been saved, the system will ask you to sa
 
 <para>Another interesting point is how we can get the output buy and sell signals from the ANN.
 The theory (Cross Target technique, by Prof. Pietro Terna) that resolves this problem can be seen 
-at the following internet site:
+Alat the following internet site:
 http://web.econ.unito.it/terna/ct-era/ct-era.html
 You must think about the above technique in the following way: the actions are buy and sell signals; the effect of the actions is the capital.
 For the sake of simplicity we have not put the capital as output of the ANN, so the ANN has only two
@@ -1787,7 +1807,30 @@ text box, choose the bundle of stocks carefully, because the system manages only
 </section>
 </chapter>
 
+<chapter name='Results'>
+  <para>Upon completion of an analyser run a window displaying the list of results appears. The columns of the list vary depending on the function used, but symbols, buy and sell rules, and return are typical. </para>
+  <para>Selecting 'Transactions' from the 'Result' menu displays a table showing how the value and return changed over the given time period. The following columns appear by default: 
+    <list>
+      <item>Date</item> 
+      <item>Stocks</item> 	    
+      <item>Market Value (This value is actually the capital value of the portfolio. It is the sum of all the accounts in the portfolio)</item> 
+      <item>Value Change (The raw difference between the previous and current market values)  </item> 
+      <item>Change (The percentage change of the above)</item> 
+      
+    </list>
+  </para>
+  <para>The following columns can also be displayed: 
+    <list>
+      <item>Cash Value (The amount in the cash account)</item>
+      <item>Share Value (The value of the shares multiplied by the number of shares. The difference between market value and share value is that share value excludes the amount in the cash account)</item>
+      <item>Return (The difference between the market values)</item>
+    </list>
+  </para>
 </chapter>
+
+</chapter>
+
+
 
 <chapter name='Alerts'>
 <para>An alert is a trigger which fires based upon a criteria set by a user previously and which alert the user when that critiera is met. An alert consists of a symbol, a date of effect and a triggering condition. For example, trigger an alert when symbol 'FOO' closes above $10.00. </para>
