@@ -7,16 +7,19 @@ Changes for Venice, 0.745 beta ??/??/????
 * Intraday charts
 % Preload data for most used symbols on cache refresh.
 
-Changes for Venice, 0.74 beta 16/01/2012
+Changes for Venice, 0.74 beta 16/02/2012
 =========================================
 * Added first class functions, includes, comments and alerts to the Gondola language
 * Added ability for Gondola rules to reference symbols explicitly
 * Graph settings now persist when editing settings instead of always showing
   defaults.  
 * Always use database when database settings are changed
-* Add option to enter database password instead of storing on disk.
+* Add option to enter database password instead of storing on disk
 * Mask database password when it is stored on disk
 * Added accelerator key for help
+* Prompt user to confirm before deleting Gondola rules.
+* Added functions ceil and floor to Gondola
+* Added messages to evaluation exception
 * Fixed bug #(3437002) Gondola evaluation of boolean expressions.
  
 
